repos/emily-python/contents/test/reader/fail/startingComma.em
# Can't start a line with a comma
# Arg: --ast
# Expect failure

One two
	three four
		, five
	six
